Updated the Skills section information and the About Me text. Also corrected some spacing issues in the About section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,10 +43,6 @@ h5 {
 h6 {
     font-size: 1rem;
 }
-  
-p {
-    margin-bottom: 1rem;
-}
 
 /* Navigation Bar */
 
